[gd_scene load_steps=3 format=3 uid="uid://dbv4wuuvjbgug"]

[ext_resource type="Script" path="res://Scripts/ObjectLogic/GraphVertexLogic.gd" id="1_rrufv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi2qc"]
size = Vector2(111, 40)

[node name="GraphVertex" type="Node2D"]
script = ExtResource("1_rrufv")
EdgeScenePath = "res://Objects/GraphEdge.tscn"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_mi2qc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -20.0
offset_right = 56.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Test Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
